dist_noinst_DATA = test_2p2cni.cc

noinst_PROGRAMS = test_2p2cni test_co2 test_mincco2

test_2p2cnidir = $(EXTRA_DIST=CMakeLists.txt
includedir)/dune/dumux/test/2p2cni
test_2p2cni_HEADERS = brineco2mincproblem.hh brineco2problem.hh co2_soilproperties.hh waterairproblem.hh

test_2p2cni_SOURCES = test_2p2cni.cc

EXTRA_DIST=CMakeLists.txt
include $(top_srcdir)/am/global-rules
