# build target for the simple twophase lens problem
add_executable("co2injection_immiscible" co2injection_immiscible.cc)
add_executable("co2injection_flash" co2injection_flash.cc)
add_executable("co2injection_ncp" co2injection_ncp.cc)
add_executable("co2injection_pvs" co2injection_pvs.cc)
add_executable("co2injection_immiscible_ni" co2injection_immiscible_ni.cc)
add_executable("co2injection_flash_ni" co2injection_flash_ni.cc)
add_executable("co2injection_ncp_ni" co2injection_ncp_ni.cc)
add_executable("co2injection_pvs_ni" co2injection_pvs_ni.cc)
add_executable("cuvette_pvs" cuvette_pvs.cc)
add_executable("finger_immiscible" finger_immiscible.cc)
add_executable("groundwater_immiscible" groundwater_immiscible.cc)
add_executable("infiltration_pvs" infiltration_pvs.cc)
add_executable("lens_immiscible" lens_immiscible.cc)
add_executable("lens_richards" lens_richards.cc)
add_executable("obstacle_immiscible" obstacle_immiscible.cc)
add_executable("obstacle_ncp" obstacle_ncp.cc)
add_executable("obstacle_pvs" obstacle_pvs.cc)
add_executable("outflow_pvs" outflow_pvs.cc)
add_executable("powerinjection_darcy" powerinjection_darcy.cc)
add_executable("powerinjection_forchheimer" powerinjection_forchheimer.cc)
add_executable("reservoir_blackoil" reservoir_blackoil.cc)
add_executable("test_navierstokes" test_navierstokes.cc)
add_executable("test_quadrature" test_quadrature.cc)
add_executable("test_stokes" test_stokes.cc)
add_executable("test_stokes2c" test_stokes2c.cc)
add_executable("test_stokesni" test_stokesni.cc)
add_executable("waterair_pvs_ni" waterair_pvs_ni.cc)

target_link_libraries("co2injection_immiscible" ${EwomsLinkLibraries})
target_link_libraries("co2injection_flash" ${EwomsLinkLibraries})
target_link_libraries("co2injection_ncp" ${EwomsLinkLibraries})
target_link_libraries("co2injection_pvs" ${EwomsLinkLibraries})
target_link_libraries("co2injection_immiscible_ni" ${EwomsLinkLibraries})
target_link_libraries("co2injection_flash_ni" ${EwomsLinkLibraries})
target_link_libraries("co2injection_ncp_ni" ${EwomsLinkLibraries})
target_link_libraries("co2injection_pvs_ni" ${EwomsLinkLibraries})
target_link_libraries("cuvette_pvs" ${EwomsLinkLibraries})
target_link_libraries("finger_immiscible" ${EwomsLinkLibraries})
target_link_libraries("groundwater_immiscible" ${EwomsLinkLibraries})
target_link_libraries("infiltration_pvs" ${EwomsLinkLibraries})
target_link_libraries("lens_immiscible" ${EwomsLinkLibraries})
target_link_libraries("lens_richards" ${EwomsLinkLibraries})
target_link_libraries("obstacle_immiscible" ${EwomsLinkLibraries})
target_link_libraries("obstacle_ncp" ${EwomsLinkLibraries})
target_link_libraries("obstacle_pvs" ${EwomsLinkLibraries})
target_link_libraries("outflow_pvs" ${EwomsLinkLibraries})
target_link_libraries("powerinjection_darcy" ${EwomsLinkLibraries})
target_link_libraries("powerinjection_forchheimer" ${EwomsLinkLibraries})
target_link_libraries("reservoir_blackoil" ${EwomsLinkLibraries})
target_link_libraries("test_navierstokes" ${EwomsLinkLibraries})
target_link_libraries("test_quadrature" ${EwomsLinkLibraries})
target_link_libraries("test_stokes" ${EwomsLinkLibraries})
target_link_libraries("test_stokes2c" ${EwomsLinkLibraries})
target_link_libraries("test_stokesni" ${EwomsLinkLibraries})
target_link_libraries("waterair_pvs_ni" ${EwomsLinkLibraries})

# add required libraries and includes to the build flags 
link_directories(${EwomsLinkDirectories})
include_directories(${EwomsIncludeDirectories})

# make sure the grids are present in the build directory
add_custom_command(TARGET "lens_immiscible"
                   POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E
                        copy_directory 
                           "${CMAKE_CURRENT_SOURCE_DIR}/grids"
                           "${CMAKE_CURRENT_BINARY_DIR}/grids")
