SUBDIRS = problems grids quadrature

EXTRA_DIST = CMakeLists.txt

check_PROGRAMS = \
cuvette_pvs \
groundwater_immiscible \
infiltration_pvs \
injection_flash \
injection_immisicble_ni \
injection_ncp \
injection_pvs \
lens_immiscible \
lens_richards \
obstacle_ncp \
obstacle_pvs \
outflow_pvs \
finger_immiscible \
reservoir_blackoil \
waterair_pvs_ni

cuvette_pvs_SOURCES=cuvette_pvs.cc
groundwater_immiscible_SOURCES=groundwater_immiscible.cc 
infiltration_pvs_SOURCES=infiltration_pvs.cc
injection_flash_SOURCES=injection_flash.cc
injection_immisicble_ni_SOURCES=injection_immisicble_ni.cc
injection_ncp_SOURCES=injection_ncp.cc
injection_pvs_SOURCES=injection_pvs.cc
lens_immiscible_SOURCES=lens_immiscible.cc
lens_richards_SOURCES=lens_richards.cc
obstacle_ncp_SOURCES=obstacle_ncp.cc
obstacle_pvs_SOURCES=obstacle_pvs.cc
outflow_pvs_SOURCES=outflow_pvs.cc
finger_immiscible_SOURCES=finger_immiscible.cc
reservoir_blackoil_SOURCES=reservoir_blackoil.cc
waterair_pvs_ni_SOURCES=waterair_pvs_ni.cc

include $(top_srcdir)/am/global-rules

