SUBDIRS = problems grids

EXTRA_DIST = CMakeLists.txt grids/*.dgf

check_PROGRAMS = \
co2injection_immiscible \
co2injection_flash \
co2injection_ncp \
co2injection_pvs \
co2injection_immiscible_ni \
co2injection_flash_ni \
co2injection_ncp_ni \
co2injection_pvs_ni \
cuvette_pvs \
diffusion_ncp \
diffusion_pvs \
diffusion_flash \
finger_immiscible \
groundwater_immiscible \
infiltration_pvs \
lens_immiscible \
lens_richards \
obstacle_immiscible \
obstacle_ncp \
obstacle_pvs \
outflow_pvs \
powerinjection_darcy \
powerinjection_forchheimer \
reservoir_blackoil \
test_navierstokes \
test_quadrature \
test_stokes \
test_stokes2c \
test_stokesni \
waterair_pvs_ni

co2injection_immiscible_SOURCES=co2injection_immiscible.cc
co2injection_flash_SOURCES=co2injection_flash.cc
co2injection_ncp_SOURCES=co2injection_ncp.cc
co2injection_pvs_SOURCES=co2injection_pvs.cc
co2injection_immiscible_ni_SOURCES=co2injection_immiscible_ni.cc
co2injection_flash_ni_SOURCES=co2injection_flash_ni.cc
co2injection_ncp_ni_SOURCES=co2injection_ncp_ni.cc
co2injection_pvs_ni_SOURCES=co2injection_pvs_ni.cc
cuvette_pvs_SOURCES=cuvette_pvs.cc
diffusion_flash_SOURCES=diffusion_flash.cc
diffusion_ncp_SOURCES=diffusion_ncp.cc
diffusion_pvs_SOURCES=diffusion_pvs.cc
finger_immiscible_SOURCES=finger_immiscible.cc
groundwater_immiscible_SOURCES=groundwater_immiscible.cc 
infiltration_pvs_SOURCES=infiltration_pvs.cc
lens_immiscible_SOURCES=lens_immiscible.cc
lens_richards_SOURCES=lens_richards.cc
obstacle_immiscible_SOURCES=obstacle_immiscible.cc
obstacle_ncp_SOURCES=obstacle_ncp.cc
obstacle_pvs_SOURCES=obstacle_pvs.cc
outflow_pvs_SOURCES=outflow_pvs.cc
powerinjection_darcy_SOURCES=powerinjection_darcy.cc
powerinjection_forchheimer_SOURCES=powerinjection_forchheimer.cc
reservoir_blackoil_SOURCES=reservoir_blackoil.cc
test_navierstokes_SOURCES=test_navierstokes.cc
test_quadrature_SOURCES=test_quadrature.cc
test_stokes_SOURCES=test_stokes.cc
test_stokes2c_SOURCES=test_stokes2c.cc
test_stokesni_SOURCES=test_stokesni.cc
waterair_pvs_ni_SOURCES=waterair_pvs_ni.cc

include $(top_srcdir)/am/global-rules

