dist_noinst_DATA = test_transport.cc

noinst_PROGRAMS = test_transport test_boxtransport
test_transportdir = $(EXTRA_DIST=CMakeLists.txt
includedir)/dune/dumux/test/transport
test_transport_HEADERS = simplerproblem.hh
test_transport_SOURCES = test_transport.cc

EXTRA_DIST=CMakeLists.txt
include $(top_srcdir)/am/global-rules
