# tests where program to build and program to run are equal
NORMALTESTS = test_propertysystem

# list of tests to run
#TESTS = $(NORMALTESTS)

# programs just to build when "make check" is used
check_PROGRAMS = $(NORMALTESTS)

test_propertysystem_SOURCES = test_propertysystem.cc

EXTRA_DIST=CMakeLists.txt
include $(top_srcdir)/am/global-rules
